# PDA_Project

./: .gitignore  CLAUDE.md  DEBUG_SUMMARY.md  HANDOFF-2026-05-29-three-week-pause.md  conftest.py  requirements-dev.txt  verify_udl_decomposition.py
.planning/: HANDOFF.json  MILESTONES.md  NEXT-SESSION.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  todos.md
api_server/: app.py
converters/: tekla_to_pda.py
pyrevit_exporters/: export_to_pda.py
scripts/: _snapshot_common.py  capture_solver_snapshots.py  verify_solver_snapshots.py
solver_core/: pyproject.toml
solver_core/src/pda_analysis_software/: errors.py
solver_core/src/pda_analysis_software/adapters/: frame_adapters.py  truss_adapters.py
solver_core/src/pda_analysis_software/engine/: analysis_engine.py
solver_core/src/pda_analysis_software/loads/: code_packs.py  combinations.py  natures.py
solver_core/src/pda_analysis_software/models/: frame2d_model.py  truss2d_model.py
solver_core/src/pda_analysis_software/results/: results.py
solver_core/src/pda_analysis_software/solvers/: frame_v1_legacy.py  frame_v2.py  truss2d.py
solver_core/src/pda_analysis_software/utils/: __init__.py  section_properties.py
tests/: calibrate_horizontal_udl.py  test_cantilever_horiz_udl_enf.py  test_frame_v2.py  test_inclined_beam_vertical_udl.py  test_interchange.py  test_load_combinations.py  test_load_combinations_api.py  test_mc_kenzie_transverse_only.py  test_mckenzie_5_3.py  test_phase6_ui_contract.py  test_section_properties.py  test_simple_portal_horizontal_udl.py  (+3 more)
(+350 files in other folders)
