[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pda_analysis_software"
version = "0.1.0"
description = "Structural analysis solver core (truss/frame) with adapters and engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]